Fix for UI when content of task window is too big

--- a/idle.css
+++ b/idle.css
@@ -86,7 +86,7 @@ button
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
 	width: 100%;
-	height: 100%;
+	height: 75%;
 }
 
 .player_info_group
